--- a/examples/nlp/dialogue_state_tracking/conf/sgdqa_config.yaml
+++ b/examples/nlp/dialogue_state_tracking/conf/sgdqa_config.yaml
@@ -67,6 +67,7 @@ model:
     pin_memory: false
 
   validation_ds:
+    state_tracker: nemotracker
     batch_size: 8
     shuffle: false
     num_samples: -1 # number of samples to be considered, -1 means all the dataset
