--- a/examples/nlp/dialogue_state_tracking/conf/sgdqa_config.yaml
+++ b/examples/nlp/dialogue_state_tracking/conf/sgdqa_config.yaml
@@ -17,23 +17,22 @@ pretrained_model: null # pretrained QAModel model from list_available_models()
 trainer:
   gpus: 1 # number of GPUs (0 for CPU), or list of the GPUs to use e.g. [0, 1]
   num_nodes: 1
-  max_epochs: 100
+  max_epochs: 3
   max_steps: null # precedence over max_epochs
   accumulate_grad_batches: 1 # accumulates grads every k batches
-  gradient_clip_val: 0.0
-  amp_level: O0 # O1/O2 for mixed precision
-  precision: 32 # Should be set to 16 for O1 and O2 to enable the AMP.
+  gradient_clip_val: 1.0
+  amp_level: O1 # O1/O2 for mixed precision
+  precision: 16 # Should be set to 16 for O1 and O2 to enable the AMP.
   accelerator: ddp
   log_every_n_steps: 5  # Interval of logging.
   val_check_interval: 1.0  # Set to 0.25 to check 4 times per epoch, or an int for number of iterations
   resume_from_checkpoint: null # The path to a checkpoint file to continue the training, restores the whole state including the epoch, step, LR schedulers, apex, etc.
   num_sanity_val_steps: 0 # number of steps to perform validation steps for sanity check the validation process before starting the training, setting to 0 disables it
-
   checkpoint_callback: False  # Provided by exp_manager
   logger: False  # Provided by exp_manager
 
 model:
-  nemo_path: sgd_qa.nemo # filename to save the model and associated artifacts to .nemo file
+  nemo_path: null # filename to save the model and associated artifacts to .nemo file
   tokenizer:
       tokenizer_name: ${model.language_model.pretrained_model_name} # or sentencepiece
       vocab_file: null # path to vocab file
@@ -69,7 +68,6 @@ model:
     ds_item: "train"
     batch_size: 128
     shuffle: true
-    num_samples: -1 # number of samples to be considered, -1 means all the dataset
     num_workers: 3
     drop_last: false
     pin_memory: false
@@ -78,7 +76,6 @@ model:
     ds_item: ["dev", "test"]
     batch_size: 8
     shuffle: false
-    num_samples: -1 # number of samples to be considered, -1 means all the dataset
     num_workers: 3
     drop_last: false
     pin_memory: false
@@ -87,7 +84,6 @@ model:
     ds_item: ["test"]
     batch_size: 8
     shuffle: false
-    num_samples: -1 # number of samples to be considered, -1 means all the dataset
     num_workers: 3
     drop_last: false
     pin_memory: false
@@ -104,7 +100,7 @@ model:
       name: PolynomialDecayAnnealing
       # Scheduler params
       warmup_steps: null
-      warmup_ratio: 0.1
+      warmup_ratio: 0.02
       last_epoch: -1
       # pytorch lightning args
       monitor: val_loss
